traefik/canary/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-canary
  namespace: echo
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echo-canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo-canary
    spec:
      containers:
        - name: hello
          image: hashicorp/http-echo
          command:
            - /http-echo
            - -text=hello canary
          ports:
            - name: http
              containerPort: 5678
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: echo-canary
  namespace: echo
  labels:
    app.kubernetes.io/name: echo-canary
spec:
  selector:
    app.kubernetes.io/name: echo-canary
  ports:
    - protocol: TCP
      port: 5678
