traefik/canary/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo
  namespace: echo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-canary.invideo.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: echo
          kind: TraefikService
